WP.org Themes: Avoid double scroll-bar in modal.
See https://wordpress.slack.com/archives/meta/p1424377202001290, #745.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@1283 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/style.css
@@ -96,7 +96,6 @@ p a:hover {
 	margin: 0 auto;
 	max-width: 1290px;
 	-webkit-overflow-scrolling: touch;
-	overflow-y: scroll;
 	top: 3%;
 }
 
